--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="docs-section" id="about">
   <h4>Bio</h4>
   <p style="text-align: justify;">
-  I am a phd candidate in <a href="https://cbs.umn.edu/directory/jesus-pinto-ledezma">Shinsuke Koike</a> lab at the Tokyo University of Agriculture and Technology (TUAT). 
+  I am a phd candidate in <a href="https://web.tuat.ac.jp/~for-bio/index.html">Shinsuke Koike</a> lab at the Tokyo University of Agriculture and Technology (TUAT). 
   </p>
 
   <p style="text-align: justify;">
