--- a/index.html
+++ b/index.html
@@ -67,58 +67,14 @@ title: Home
   <div style="height:300px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
       <li>
-        <b style="color:Toamto">[Oct. 2024]</b> &nbsp&nbsp
-         the North American bird migration <a href="https://ace-eco.org/vol19/iss2/art13/">paper</a> is out in <i>Avian Conservation and Ecology</i>. 
-      </li>
-      <li>
-        <b style="color:Toamto">[Oct. 2024]</b> &nbsp&nbsp
-         the paper about how to incorporate familiarity covariates into step selection analysis was accepted by <i>Movement Ecology</i>. 
-      </li>
-      <li>
         <b style="color:Toamto">[Sep. 2024]</b> &nbsp&nbsp
-         the North American bird migration paper was accepted by <i>Avian Conservation and Ecology</i>. 
+         was awarded the <a href="https://mammalogy.jp/prize/2024.html/">best presentation award</a> from <i>the 2024 Annual Meeting of the Mammal Society of Japan</i>. 
       </li>
       <li>
         <b style="color:Toamto">[Aug. 2024]</b> &nbsp&nbsp
-        successfully defended my doctoral dissertation! 
+        new <a href="https://www.researchsquare.com/article/rs-4937471/v1">preprint</a> about the range expansion of six species of large terrestrial mammals over 40 years is out.
       </li>
-      <li>
-        <b style="color:Toamto">[Aug. 2024]</b> &nbsp&nbsp
-        new <a href="https://www.biorxiv.org/content/10.1101/2024.07.29.605602v1">preprint</a> about identifying biases within scientific communities in movement ecology is out.
-      </li>
-      <li>
-        <b style="color:Toamto">[July. 2024]</b> &nbsp&nbsp
-        new Shaw lab <a href="https://royalsocietypublishing.org/doi/10.1098/rspb.2024.0803">paper</a> about theory personas (a guide on how to frame theoretical research questions) was accepted in <i>Proc B</i>.
-      </li>
-      <li>
-        <b style="color:Toamto">[April. 2024]</b> &nbsp&nbsp
-        starting a <a href="https://www.ab.mpg.de/500689/Drylands">dryland project</a> with the Max-Planck Institute of Animal Behavior to understand the effects of dryland on vultures' space use! 
-      </li> 
-      <li>
-        <b style="color:Toamto">[April. 2024]</b> &nbsp&nbsp
-        new Fieberg lab <a href="https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.14321">paper</a> on modeling individual variability using step selection analysis is out in <i>Methods in Ecology and Evolution</i>. 
-      </li>    
-      <li>
-        <b style="color:Toamto">[Oct. 2023]</b> &nbsp&nbsp
-        new <a href="https://ecoevorxiv.org/repository/view/6000/">preprint</a> about how results vary when many different researchers analyze the same data is out. 
-      </li>      
-      <li>
-        <b style="color:Toamto">[Aug. 2023]</b> &nbsp&nbsp
-        new <a href="https://www.biorxiv.org/content/10.1101/2023.08.15.553411v1.abstract">preprint</a> about how to incorporate familiarity covariates into step selection analysis is out. 
-      </li>      
-      <li>
-        <b style="color:Toamto">[April. 2023]</b> &nbsp&nbsp
-        was awarded the <a href="https://grad.umn.edu/funding/current-students/doctoral-dissertation-fellowship"> Doctoral Dissertation Fellowship</a> for 2023-2024!  
-      </li>
-      <li>
-        <b style="color:Toamto">[July. 2022]</b> &nbsp&nbsp
-        received the <a href="https://www.nsf.gov/pubs/2021/nsf21013/nsf21013.jsp">National Science Foundation (NSF) - INTERN Award</a> to work with the Smithsonian Conservation Biology Institute's Conservation Ecology Center (CEC) for 2022-2023! 
-      </li>   
-      <li>
-        <b style="color:Toamto">[May. 2022]</b> &nbsp&nbsp
-        received the <a href="https://fellowships.si.edu/opportunity/smithsonian-institution-fellowship-program-sifp">Smithsonian Institution Fellowship (SIFP)</a> to work with the Smithsonian Migratory Bird Center for summer 2022! 
-      </li> 
-    </ul>
+      </ul>
   </div>
 </div>
 
