--- a/__redirect_mit.html
+++ b/__redirect_mit.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Martin Saveski | Home</title>
-    <meta http-equiv="refresh" content="0; URL=https://web.stanford.edu/~msaveski/" />
+    <title>Seung-Yun Baek | Home</title>
+    <meta http-equiv="refresh" content="0; URL=https://www.researchgate.net/profile/Seungyun-Baek-3/" />
 </head>
 
 <body>
