--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ title: Home
 <div class="docs-section" id="resume">
   <h4>Vitæ</h4>
 
-  <p>Full CV in <a href={{ "/assets/cv/CV_Kim.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> 
+  <p>Full CV in <a href={{ "/assets/cv/CV_baek.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> 
 
   <!-- The Timeline -->
  <!-- <ul class="timeline">
