--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@ title: Home
 </div>-->
 
 <!-- ========== collaborators ========== -->
-<div class="docs-section" id="people">
-  <h4>Collaborators</h4>
+<!-- <div class="docs-section" id="people">
+  <h4>Collaborators</h4> 
 
   {% assign current_people = site.data.collaborators.collaborators %}
   {% for person in current_people %}
@@ -366,7 +366,7 @@ title: Home
       </p>
     </div>
   {% endfor %}
-</div>
+</div> -->
   
   <div class="docs-section" id="ack">
   <h4>Acknowledgement</h4>
