--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ title: Home
 <div class="docs-section" id="about">
   <h4>Bio</h4>
   <p style="text-align: justify;">
-  I am a phd candidate in <a href="https://web.tuat.ac.jp/~for-bio/index.html">Shinsuke Koike</a> lab at the Tokyo University of Agriculture and Technology (TUAT). 
+  I am a PhD candidate in <a href="https://web.tuat.ac.jp/~for-bio/index.html">Shinsuke Koike</a> lab at Tokyo University of Agriculture and Technology (TUAT). 
   </p>
 
   <p style="text-align: justify;">
-  My research focuses on ecology of large mammals.
+  My research focuses on the ecology of large mammals, with my current focus on the spatial ecology related to the movement of Asian black bears.
   </p>
     
  <p> <b style="color: red;">Note</b>: <b>TEXT TEXT TEXT! :) </b></p>
