--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@ title: Home
 </div>
 
 <!-- ========== PUBLICATIONS ========== -->
-<!-- <div class="docs-section" id="publications">
-  <h4>Publications</h4> -->
+<div class="docs-section" id="publications">
+  <h4>Publications</h4>
 
-  <p>Most recent publications on <a href="https://www.researchgate.net/profile/Seungyun-Baek-3/research" target="_blank">Research Gate</a>.<br/>
- <!-- <sup>‡</sup> indicates equal contribution. -->
+  <p>Most recent publications on <a href="https://scholar.google.com/citations?user=1HvwzlgAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
+  <sup>‡</sup> indicates equal contribution.
   </p>
 
- <!-- <ul class="tab-nav">
+  <ul class="tab-nav">
     <li><div class="button active" data-ref="#papers-sel">Selected</div></li>
     <li><div class="button" data-ref="#papers-press">In press</div></li>
     <li><div class="button" data-ref="#papers-rev">In review</div></li>
     <li><div class="button" data-ref="#papers-prep">In preparation</div></li>
     <li><div class="button" data-ref="#papers-all">All</div></li> 
-  </ul> -->
+  </ul>
 
   <div class="tab-content">
  <!-- Selected PAPERS -->    
