--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home
   </p>
 
   <p style="text-align: justify;">
-  My research focuses on the ecology of large mammals, with my current focus on the spatial ecology related to the movement of Asiatic black bears.
+  My research interests lie in the ecology of large mammals, with my current focus on the spatial ecology related to the movement of Asiatic black bears.
   </p>
     
  <p> <b style="color: red;">Note</b>: <b>TEXT TEXT TEXT! :) </b></p>
