--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ title: Home
 <div class="docs-section" id="publications">
   <h4>Publications</h4>
 
-  <p>Most recent publications on <a href="https://scholar.google.com/citations?user=1HvwzlgAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
+  <p>Most recent publications on <a href="https://scholar.google.com/citations?user=kaaMERsAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
   <sup>‡</sup> indicates equal contribution.
   </p>
 
