--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
   My research interests lie in the ecology of large mammals, with my current focus on the spatial ecology related to the movement of Asiatic black bears.
   </p>
     
- <p> <b style="color: red;">Note</b>: <b>TEXT TEXT TEXT! :) </b></p>
+ <p> <b style="color: red;">Note</b>: <b> :) </b></p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
